package protobuf;

message BasicOps {
	required bytes key = 1;
	optional bytes value = 2;
	// whether add key to sorted db too
	optional bool sorted = 3;
}

message BasicResp {
	// 1 - success
	// 2 - not exist
	// 3 - set error
	// 4 - no key specified
	// 5 - no value specified
	// 255 - error occurs
	required int32 response_code = 1;
	optional bytes value = 2;
	optional bytes key = 3;
}

message PagedListReq {
	optional bytes from_key = 1;
	required int32 page_size = 2;
	//true - next, false - previous
	required bool order = 3;
	optional int32 page_no = 4;
}

message PagedListResp {
	required int32 response_code = 1;
	optional int32 page_no = 2;
	optional int32 page_size = 3;
	optional int32 list_cnt = 4;
	repeated BasicResp list = 5;
}
